feat(EP-004/EP-016/EP-017/EP-018): dashboard shell, sub-sectors, UI improvements
Frontend:
- Wire SubSectorTable into sector drilldown page (sortable, replaces static table)
- Add RS Acceleration column (rs60-rs120) to SubSectorTable with AccelCell component
- Add Portfolio Signal Strength metric to portfolio header (weighted composite score)
- Add RRGPositionTable server component to RRG page (coordinates + direction arrows)
- Add MarketBreadthBar, MomentumLeadersPanel, ScoreExtremesPanel, Sparkline components
- Add AllocationDonutChart for portfolio visualization
- Add sector hub page with sparklines and drill-down navigation
- Add admin/ticker-mappings page

Backend:
- Add compositeScore field to SubSectorSummaryDto
- Add SubSectorService composite score computation
- Add TickerMapping domain, repository, controller, mapper
- Add CORS allowed origins for port 3001 (E2E test port)
- Add V10-V11-V14-V15 Flyway migrations
- Add test coverage: AlertControllerTest, BacktestControllerTest, PortfolioControllerTest,
  RotationControllerTest, SubSectorControllerTest, TickerMappingControllerTest

Spec:
- Add EP-018 mockup-first workflow rule to context/.ai/conventions.md

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>